[package]
name = "tgbot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
tokio = { version = "0.2.2", features = ["full"] }
mini-redis = "0.4"
futures = "0.3.28"
rand = "0.8.5"
dotenv = "0.15.0"
